src/objects/eApp_Redirects__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Offer_ID__c</fullName>
        <label>Offer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eApp Redirect</label>
    <pluralLabel>eApp Redirects</pluralLabel>
</CustomObject>